# django_openstack_auth

./: .gitignore  .gitreview  .mailmap  .zuul.yaml  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  openstack-common.conf  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.tx/: config
doc/source/: conf.py  index.rst  installation.rst
doc/source/configuration/: index.rst
doc/source/reference/: index.rst
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat
docs/ref/: user.rst
openstack_auth/: __init__.py  backend.py  exceptions.py  forms.py  models.py  policy.py  urls.py  user.py  utils.py  views.py
openstack_auth/locale/: django.pot  openstack_auth.pot
openstack_auth/locale/ar/LC_MESSAGES/: django.mo  django.po
openstack_auth/locale/ca/LC_MESSAGES/: django.mo  django.po
openstack_auth/locale/cs/LC_MESSAGES/: django.po
openstack_auth/locale/de/LC_MESSAGES/: django.mo  django.po
openstack_auth/locale/en/LC_MESSAGES/: django.mo  django.po
openstack_auth/locale/en_AU/LC_MESSAGES/: django.mo  django.po
openstack_auth/locale/en_GB/LC_MESSAGES/: django.mo  django.po
openstack_auth/locale/es/LC_MESSAGES/: django.mo  django.po
openstack_auth/locale/es_MX/LC_MESSAGES/: django.mo  django.po
openstack_auth/locale/fi_FI/LC_MESSAGES/: django.po
openstack_auth/locale/fr/LC_MESSAGES/: django.mo  django.po
openstack_auth/locale/hi/LC_MESSAGES/: django.mo  django.po
openstack_auth/locale/id/LC_MESSAGES/: django.po
openstack_auth/locale/it/LC_MESSAGES/: django.po
openstack_auth/locale/ja/LC_MESSAGES/: django.mo  django.po
openstack_auth/locale/kn/LC_MESSAGES/: django.po
openstack_auth/locale/ko_KR/LC_MESSAGES/: django.mo  django.po
openstack_auth/locale/ne/LC_MESSAGES/: django.po
openstack_auth/locale/nl_NL/LC_MESSAGES/: django.mo  django.po
openstack_auth/locale/pa_IN/LC_MESSAGES/: django.mo  django.po
openstack_auth/locale/pl_PL/LC_MESSAGES/: django.mo  django.po
openstack_auth/locale/pt/LC_MESSAGES/: django.mo  django.po
openstack_auth/locale/pt_BR/LC_MESSAGES/: django.mo  django.po
openstack_auth/openstack/common/: _i18n.py  log.py  policy.py
openstack_auth/plugin/: __init__.py  base.py  k2k.py  password.py  token.py
openstack_auth/tests/: data.py  data_v2.py  data_v3.py  run_tests.py  settings.py  tests.py  urls.py
(+14 files in other folders)
